--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,30 +4,39 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="facebook_app_id">156568555035441</string>
-    <string name="title_activity_set_profile">setProfile</string>
-    <string name="vegetarian">vegetarian</string>
-    <string name="pork">pork</string>
-    <string name="celery">celery</string>
-    <string name="done">Done</string>
-    <string name="shellfish">shellfish</string>
-    <string name="sesame">sesame</string>
-    <string name="peanuts">peanuts</string>
-    <string name="vegan">vegan</string>
-    <string name="eggsfree">eggsFree</string>
-    <string name="beef">beef</string>
-    <string name="chicken">chicken</string>
-    <string name="i_m_avoiding">i_m_avoiding</string>
-    <string name="fish">fish</string>
-    <string name="honey">honey</string>
-    <string name="lupin">lupin</string>
-    <string name="soy">soy</string>
-    <string name="sulphite">sulphite</string>
-    <string name="algae">algae</string>
-    <string name="nuts">nuts</string>
-    <string name="mustard">mustard</string>
-    <string name="corn">corn</string>
-    <string name="insects">insects</string>
-    <string name="glutenfree">glutenFree</string>
-    <string name="diaryfree">diaryFree</string>
+    <!-- Screen #1 Design -->
+        <string name="welcome">Welcome to WisEat, an app that\n helps you consume food products smarter :)</string>
+        <string name="ggl_login">Log in with Google</string>
+        <string name="cpyRights">© 20182W71. All rights reserved.</string>
+    <!--End Of Screen #1 Design -->
+
+    <!-- Set Profile -->
+        <string name="title_activity_set_profile">setProfile</string>
+        <string name="vegetarian">vegetarian</string>
+        <string name="pork">pork</string>
+        <string name="celery">celery</string>
+        <string name="done">Done</string>
+        <string name="shellfish">shellfish</string>
+        <string name="sesame">sesame</string>
+        <string name="peanuts">peanuts</string>
+        <string name="vegan">vegan</string>
+        <string name="eggsfree">eggsFree</string>
+        <string name="beef">beef</string>
+        <string name="chicken">chicken</string>
+        <string name="i_m_avoiding">i_m_avoiding</string>
+        <string name="fish">fish</string>
+        <string name="honey">honey</string>
+        <string name="lupin">lupin</string>
+        <string name="soy">soy</string>
+        <string name="sulphite">sulphite</string>
+        <string name="algae">algae</string>
+        <string name="nuts">nuts</string>
+        <string name="mustard">mustard</string>
+        <string name="corn">corn</string>
+        <string name="insects">insects</string>
+        <string name="glutenfree">glutenFree</string>
+        <string name="diaryfree">diaryFree</string>
+    <!--End Of Screen Set Profile -->
+
     <string name="title_activity_home_page">HomePage</string>
 </resources>
