Final Login Screen Design Fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="facebook_app_id">156568555035441</string>
     <!-- Screen #1 Design -->
         <string name="welcome">Welcome to WisEat, an app that\n helps you consume food products smarter :)</string>
-        <string name="ggl_login">Log in with Google</string>
+        <string name="ggl_login">\t\tLog in with Google</string>
         <string name="cpyRights">© 20182W71. All rights reserved.</string>
     <!--End Of Screen #1 Design -->
 
