final Ocr + homepage adds

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,9 @@
     <!---HomePage-->
     <string name="take_picture">Take a picture to check ingredients</string>
     <string name="typing">Check ingredients by typing manually</string>
+    <string name="logout">\tLog Out</string>
+    <string name="profile">Edit Profile</string>
+
     <!---HomePage-->
 
 </resources>
