adding pressed effect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="typing">Type manually</string>
     <string name="logout">\tLog Out</string>
     <string name="profile">Edit Profile</string>
-
+    <string name="home_guidelines">Welcome!\n How would you like to check the ingredients in your product?</string>
     <!---HomePage-->
 
 </resources>
